--- a/.circleci/circle.yml
+++ b/.circleci/circle.yml
@@ -1,24 +1,26 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: nginx:alpine
+    machine: true
 
-   steps:
-     - checkout
+    working_directory: ~/learn-circleci_heroku
+
+    steps:
+      - checkout
 
       - run
-          name: Build Docker image
-          command: docker build -t amanu/coba-hero:$CIRCLE_SHA1 .
+        name: Build Docker image
+        command: docker build -t amanu/coba-hero:$CIRCLE_SHA1 .
+
       - run
-          name: Push to DockerHub
-          command: |
-            docker login -u $DOCKERHUB_LOGIN -p $DOCKERHUB_PASSWORD
+        name: Push to DockerHub
+        command: |
+          docker login -u $DOCKERHUB_LOGIN -p $DOCKERHUB_PASSWORD
             docker push amanu/coba-hero:$CIRCLE_SHA1
 
       - run
-          name: Deploy to heroku
-          command: |
-            docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
-            docker tag amanu/coba-hero:$CIRCLE_SHA1 registry.heroku.com/$HEROKU_APP_NAME/
-            docker push registry.heroku.com/$HEROKU_APP_NAME/
+        name: Deploy to heroku
+        command: |
+          docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
+          docker tag amanu/coba-hero:$CIRCLE_SHA1 registry.heroku.com/$HEROKU_APP_NAME/
+          docker push registry.heroku.com/$HEROKU_APP_NAME/
